Modernize to Java-based Spring config